Bug fixes in additional quick edit data returned, taxonomies hidden by default

--- a/assets/scss/_quick-edit.scss
+++ b/assets/scss/_quick-edit.scss
@@ -83,7 +83,7 @@
 		text-align: center;
 	}
 	.np-taxonomies {
-		//display: none;
+		display: none;
 		clear: both;
 		background-color: $gray-lighter;
 		padding: 8px;
